oxifft-codegen/tests/compile_fail/notw_empty_input.rs
use oxifft_codegen::gen_notw_codelet;

gen_notw_codelet!();

fn main() {}
