oxifft-codegen/tests/compile_fail/notw_empty_input.stderr
error: unexpected end of input, expected integer literal
 --> tests/compile_fail/notw_empty_input.rs:3:1
  |
3 | gen_notw_codelet!();
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `gen_notw_codelet` (in Nightly builds, run with -Z macro-backtrace for more info)
